--- a/plb/envs/ricegrip.yml
+++ b/plb/envs/ricegrip.yml
@@ -45,6 +45,7 @@ VARIANTS:
     ENV:
       loss:
         target_path: envs/assets/RiceGrip-v1.npy
+        action_path: envs/assets/RiceGrip-action.npy
   - SHAPES:
       - width: (0.20, 0.20, 0.20)
       - init_pos: (0.5, 0.1, 0.5)
