--- a/plb/envs/ricegrip.yml
+++ b/plb/envs/ricegrip.yml
@@ -54,7 +54,8 @@ VARIANTS:
       - init_pos: (0.2, 0.2, 0.2)
     ENV:
       loss:
-        target_path: envs/assets/RiceGrip-v1.npy
+        target_path: envs/assets/RiceGrip-v2.npy
+        action_path: envs/assets/RiceGrip-action.npy
   - SHAPES:
       - width: (0.20, 0.20, 0.20)
       - init_pos: (0.5, 0.1, 0.5)
