--- a/plb/envs/ricegrip.yml
+++ b/plb/envs/ricegrip.yml
@@ -35,6 +35,7 @@ RENDERER:
   camera_pos: (0.5, 2., 1.2)
   camera_rot: (1.3, 0.)
   use_directional_light: True
+  sdf_threshold: 0.4144
 VARIANTS:
   - SHAPES:
       - width: (0.20, 0.20, 0.20)
@@ -46,6 +47,7 @@ VARIANTS:
       loss:
         target_path: envs/assets/RiceGrip-v1.npy
         action_path: envs/assets/RiceGrip-action.npy
+        ppos_path: envs/assets/RiceGrip-ppos.npy
   - SHAPES:
       - width: (0.20, 0.20, 0.20)
       - init_pos: (0.5, 0.1, 0.5)
